quality of life improvements for fill-container + upgrade plugin